If an index definition has includedPaths or excludedPaths defined as a String instead of array of String, log a warning and treat them as a one-element array instead of assuming that it they are not defined.