@@ -22,7 +22,6 @@ package org.apache.jackrabbit.oak.spi.filter;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -31,10 +30,11 @@ import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
 import org.apache.jackrabbit.oak.spi.state.NodeBuilder;
 import org.jetbrains.annotations.NotNull;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import static org.apache.jackrabbit.guava.common.base.Preconditions.checkState;
 import static org.apache.jackrabbit.guava.common.collect.Sets.newHashSet;
-import static java.util.Collections.singletonList;
 import static org.apache.jackrabbit.oak.commons.PathUtils.isAncestor;
 
 /**
@@ -42,7 +42,8 @@ import static org.apache.jackrabbit.oak.commons.PathUtils.isAncestor;
  * or not
  */
 public class PathFilter {
-    private static final Collection<String> INCLUDE_ROOT = singletonList("/");
+    private static final Logger LOG = LoggerFactory.getLogger(PathFilter.class);
+    private static final Collection<String> INCLUDE_ROOT = List.of("/");
     /**
      * Multi value property name used to determine list of paths to be included
      */
@@ -73,7 +74,7 @@ public class PathFilter {
         TRAVERSE
     }
 
-    private static final PathFilter ALL = new PathFilter(INCLUDE_ROOT, Collections.emptyList()) {
+    private static final PathFilter ALL = new PathFilter(INCLUDE_ROOT, List.of()) {
         @Override
         public Result filter(@NotNull String path) {
             return Result.INCLUDE;
@@ -87,24 +88,26 @@ public class PathFilter {
      * multi value property with names {@link PathFilter#PROP_INCLUDED_PATHS}
      * and {@link PathFilter#PROP_EXCLUDED_PATHS}. Both the properties are
      * optional.
-     * 
+     * If the properties are defined as String instead of Strings, then they
+     * are interpreted as a single-element list.
+     *
      * @param defn nodestate representing the configuration. Generally it would
-     *            be the nodestate representing the index definition
+     *             be the nodestate representing the index definition
      * @return predicate based on the passed definition state
      */
     public static PathFilter from(@NotNull NodeBuilder defn) {
-        if (!defn.hasProperty(PROP_EXCLUDED_PATHS) &&
-                !defn.hasProperty(PROP_INCLUDED_PATHS)) {
+        if (!defn.hasProperty(PROP_EXCLUDED_PATHS) && !defn.hasProperty(PROP_INCLUDED_PATHS)) {
             return ALL;
         }
-        return new PathFilter(getStrings(defn, PROP_INCLUDED_PATHS,
-                INCLUDE_ROOT), getStrings(defn, PROP_EXCLUDED_PATHS,
-                Collections.emptyList()));
+        return new PathFilter(
+                getStringsLenient(defn, PROP_INCLUDED_PATHS, INCLUDE_ROOT),
+                getStringsLenient(defn, PROP_EXCLUDED_PATHS, List.of())
+        );
     }
 
     /**
      * Constructs the predicate with given included and excluded paths
-     *
+     * <p>
      * If both are empty then all paths would be considered to be included
      *
      * @param includes list of paths which should be included
@@ -164,11 +167,22 @@ public class PathFilter {
                 '}';
     }
 
-    private static Iterable<String> getStrings(NodeBuilder builder, String propertyName, 
-            Collection<String> defaultVal) {
+    /**
+     * Gets the value of a property of expected type Strings. However, if the property is of type String, interpret
+     * it as a single-element list instead of returning the default value.
+     *
+     * @return the value of the property if the property is set and is of type Strings or String, otherwise the default value
+     */
+    private static Iterable<String> getStringsLenient(NodeBuilder builder, String propertyName, Collection<String> defaultVal) {
         PropertyState property = builder.getProperty(propertyName);
         if (property != null && property.getType() == Type.STRINGS) {
             return property.getValue(Type.STRINGS);
+        } else if (property != null && property.getType() == Type.STRING) {
+            String value = property.getValue(Type.STRING);
+            LOG.warn("Property \"{}\"=\"{}\" has type String but it should be array of String. Proceeding by treating it as a " +
+                            "one-element array. Please correct the index definition by defining it instead as \"{}\" = [\"{}\"].",
+                    propertyName, value, propertyName, value);
+            return List.of(value);
         } else {
             return defaultVal;
         }
@@ -176,14 +190,13 @@ public class PathFilter {
 
     /**
      * Check whether this node and all descendants are included in this filter.
-     * 
+     *
      * @param path the path
      * @return true if this and all descendants of this path are included in the filter
      */
     public boolean areAllDescendantsIncluded(String path) {
         for (String excludedPath : excludedPaths) {
-            if (excludedPath.equals(path) || isAncestor(excludedPath, path) || 
-                    isAncestor(path, excludedPath)) {
+            if (excludedPath.equals(path) || isAncestor(excludedPath, path) || isAncestor(path, excludedPath)) {
                 return false;
             }
         }
@@ -194,5 +207,5 @@ public class PathFilter {
         }
         return false;
     }
-    
+
 }
